<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingNewTask">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleDoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:text="@string/add_new_task"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="textStart"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="32dp"
        android:background="#FFF"
        app:layout_constraintTop_toBottomOf="@id/titleDoes"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"/>

<LinearLayout
    android:id="@+id/background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    app:layout_constraintBottom_toBottomOf="@id/last"
    app:layout_constraintTop_toBottomOf="@id/border"
    android:layout_marginTop="44dp"
    android:background="@drawable/border">
</LinearLayout>

    <TextView
        android:id="@+id/newTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/background"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/add_title"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textAllCaps="false"/>

    <EditText
        android:inputType="text"
        android:id="@+id/etTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/newTask"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/newTask"
        android:hint="@string/what_you_wanna_do"
        app:layout_constraintEnd_toEndOf="@id/background"
        android:maxLines="2"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginEnd="12dp"/>

    <TextView
    android:id="@+id/newDesc"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    app:layout_constraintTop_toBottomOf="@id/etTask"
    app:layout_constraintStart_toStartOf="@id/background"
    android:textColor="@color/colorPrimaryDark"
    android:text="@string/description"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:textStyle="bold"
    android:textAllCaps="false"/>

    <EditText
        android:inputType="text"
        android:id="@+id/etDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/newDesc"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/newTask"
        android:hint="@string/how_can_you_do_it"
        app:layout_constraintEnd_toEndOf="@id/background"
        android:maxLines="2"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginEnd="12dp"/>

    <TextView
        android:id="@+id/newDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/etDesc"
        app:layout_constraintStart_toStartOf="@id/background"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/target_time"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/etDeadline"
        android:layout_width="0dp"
        android:layout_height="32sp"
        app:layout_constraintTop_toBottomOf="@id/newDeadline"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/newTask"
        android:text="@string/please_select_time"
        android:textSize="18sp"
        android:maxLines="2"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginEnd="12dp"/>

    <Button
        android:id="@+id/timepicker"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        app:layout_constraintTop_toBottomOf="@id/newDeadline"
        android:layout_marginTop="8dp"
        android:padding="6dp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/background"
        android:background="@drawable/button_cancel"
        android:text="Time picker"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginEnd="12dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/last"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/etDeadline"
        android:layout_marginTop="32dp"/>

    <Button
        android:id="@+id/create"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/last"
        android:text="@string/create"
        android:textStyle="bold"
        android:textColor="#FFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/button_cancel"
        app:layout_constraintTop_toBottomOf="@id/create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:text="@string/cancel"
        android:textColor="#AFAFAF"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"/>
    
    <ProgressBar
        android:id="@+id/progressBarAdding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"/>

</androidx.constraintlayout.widget.ConstraintLayout>