<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:layout_marginBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="19dp"
        android:maxLines="2"
        android:text="@string/buy_new_tutorial"
        android:textSize="24sp"
        android:textColor="#000C5D"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@id/banned"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/this_is_a_description_of_task"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginTop="8dp"
            android:textColor="#434C65"
            android:maxLines="5"
            app:layout_constraintEnd_toStartOf="@id/deadline"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="9dp"/>

    <TextView
        android:id="@+id/deadline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/banned"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/tomorrow"
        android:layout_marginEnd="32dp"
        android:textSize="18sp"
        android:textColor="#F63EA5"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/banned"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.725"/>

</androidx.constraintlayout.widget.ConstraintLayout>